<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/subreddit_sort"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indicator" />

    <LinearLayout
        android:id="@+id/indicator"
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:orientation="horizontal"
        android:background="@drawable/dialog_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/subreddit_sort_hot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray_1"
            android:paddingHorizontal="10dp"
            android:text="@string/hot"
            android:textAlignment="textStart"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            app:cornerRadius="@dimen/radius_small"
            app:icon="@drawable/outline_mode_comment_24"
            app:iconPadding="20dp"
            app:iconSize="@dimen/icon_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/subreddit_sort_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray_1"
            android:paddingHorizontal="10dp"
            android:text="@string/new_s"
            android:textAlignment="textStart"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            app:cornerRadius="@dimen/radius_small"
            app:icon="@drawable/baseline_star_border_24"
            app:iconPadding="20dp"
            app:iconSize="@dimen/icon_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subreddit_sort_hot" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/subreddit_sort_rising"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray_1"
            android:paddingHorizontal="10dp"
            android:text="@string/rising"
            android:textAlignment="textStart"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            app:cornerRadius="@dimen/radius_small"
            app:icon="@drawable/baseline_show_chart_24"
            app:iconPadding="20dp"
            app:iconSize="@dimen/icon_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subreddit_sort_new" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/subreddit_sort_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray_1"
            android:paddingHorizontal="10dp"
            android:text="@string/top"
            android:textAlignment="textStart"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            app:cornerRadius="@dimen/radius_small"
            app:icon="@drawable/baseline_bar_chart_24"
            app:iconPadding="20dp"
            app:iconSize="@dimen/icon_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subreddit_sort_rising" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/subreddit_sort_controversial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray_1"
            android:paddingHorizontal="10dp"
            android:text="@string/controversial"
            android:textAlignment="textStart"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            app:cornerRadius="@dimen/radius_small"
            app:icon="@drawable/outline_contrast_24"
            app:iconPadding="20dp"
            app:iconSize="@dimen/icon_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subreddit_sort_top" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>