<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:padding="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_searched_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ssearch_layout_bg"
            android:padding="10dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/searched_feeds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/searched_results"
                android:textColor="@color/text_muted"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searched"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searched_feeds" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_default_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ssearch_layout_bg"
            android:padding="10dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone">

            <TextView
                android:id="@+id/default_feeds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feeds"
                android:textColor="@color/text_muted"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/feed_frontpage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/gray_1"
                android:paddingHorizontal="10dp"
                android:text="@string/frontpage"
                android:textAlignment="textStart"
                android:textSize="@dimen/text_small"
                android:textStyle="bold"
                app:cornerRadius="@dimen/radius_small"
                app:icon="@drawable/baseline_home_24"
                app:iconPadding="20dp"
                app:iconSize="@dimen/icon_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/default_feeds" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/feed_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray_1"
                android:paddingHorizontal="10dp"
                android:text="@string/all"
                android:textAlignment="textStart"
                android:textSize="@dimen/text_small"
                android:textStyle="bold"
                app:cornerRadius="@dimen/radius_small"
                app:icon="@drawable/baseline_bar_chart_24"
                app:iconPadding="20dp"
                app:iconSize="@dimen/icon_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/feed_frontpage" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/feed_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray_1"
                android:paddingHorizontal="10dp"
                android:text="@string/popular"
                android:textAlignment="textStart"
                android:textSize="@dimen/text_small"
                android:textStyle="bold"
                app:cornerRadius="@dimen/radius_small"
                app:icon="@drawable/outline_mode_comment_24"
                app:iconPadding="20dp"
                app:iconSize="@dimen/icon_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/feed_all" />

            <TextView
                android:id="@+id/subscribed_feeds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/subscribed"
                android:textColor="@color/text_muted"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/feed_popular" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/subscribed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subscribed_feeds" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/gray_2"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="@color/gray_2"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-3dp"
            android:layout_marginEnd="10dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/gray_3"
            android:scaleY="1.2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>